--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 #header{
     width:100%;
     height:100vh;
-    background-image: url(./img/pic7.jpg);
+    background-image: url(./pic7.jpg);
     background-size: cover;
     background-position: center;
 
@@ -369,7 +369,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(./img/black2.jpeg);
+        background-image: url(./black2.jpeg);
     }
     .logo{
         display:none;
